# cpp-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
